# passport_verification

./: .dockerignore  .gitignore  Dockerfile  README.md  makefile  pyproject.toml
.github/workflows/: deploy.yml
app/: ai.py  main.py  prompts.py  utils.py
app/static/css/: styles.css
app/templates/: base.html  extraction_result.html  index.html
templates/: extraction_result.html  index.html  verification_result.html
terraform/: backend.tf  main.tf  variable.tf
