[project]
name = "passport-verification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.11",
    "botocore>=1.40.11",
    "fastapi[standard]>=0.116.1",
    "mangum>=0.19.0",
    "openai>=1.99.9",
    "pillow>=11.3.0",
    "ruff>=0.12.9",
]
